@@ -42,14 +42,8 @@ public class App {
      */
     public static void main(String[] args) throws Exception {
         limparTela();
-        IO.println("  ____                        _          __ _       _     _    __             __\n" + //
-                        " |  _ \\ ___ _ __   __ _ _   _(_)_ __    / _(_) __ _| |__ | |_ / /  -=(o`'.    \\ \\ \n" + //
-                        " | |_) / _ \\ '_ \\ / _` | | | | | '_ \\  | |_| |/ _` | '_ \\| __| |     '.-.\\     | |\n" + //
-                        " |  __/  __/ | | | (_| | |_| | | | | |_|  _| | (_| | | | | |_| |     /|  \\\\    | |\n" + //
-                        " |_|   \\___|_| |_|\\__, |\\__,_|_|_| |_(_)_| |_|\\__, |_| |_|\\__| |     '|  ||    | |\n" + //
-                        "                  |___/                       |___/           \\_\\     _\\_):,_ /_/ \n");
-        
-        IO.println("Saudações, pinguim! A ilha está em apuros e precisa da sua ajuda, só lhe resta lutar para encontrar o verdadeiro inimigo. Aceita essa aventura?\n");  
+        IO.println(lerTXT("src/main/resources/Assets/letreiro.txt"));
+        IO.println("\nSaudações, pinguim! A ilha está em apuros e precisa da sua ajuda, só lhe resta lutar para encontrar o verdadeiro inimigo. Aceita essa aventura?\n");  
         IO.println("1 - Sim!");
         IO.println("2 - Não...\n");
 
@@ -59,12 +53,8 @@ public class App {
         if (answer != 1) {
             limparTela();
             IO.println();
-            IO.println("  -=(o`'. ?!\r\n" + //
-                                "    '.-.\\ \r\n" + //
-                                "    /|  \\\\     Tarde demais para desistir agora. Aguente firme!\r\n" + //
-                                "    '|  || \r\n" + //
-                                "     _\\_):,_\n");
-            IO.println("Digite qualquer coisa para continuar\n");
+            IO.println(lerTXT("src/main/resources/Assets/desistir1.txt"));
+            IO.println("\nDigite qualquer coisa para continuar\n");
             rota.addEscolha(0);
             String rand = scanner.nextLine();
         } else  
@@ -79,29 +69,31 @@ public class App {
      * Instancia e configura todos os elementos do jogo (mapa, lugares, inimigos, cartas)
      */
     public static void setGame() {
-        mapa = new DefaultMutableTreeNode(new Batalha(new Inimigo("Puffle", 20, lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo0_capa.txt"), lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo0_capa_v.txt"), lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo0_capa_d.txt"), new CartaDano("A BOLA DE NEVE SUPERSÔNICA", "Carta de Ataque", 0, 10), new CartaDano("O CHUTE QUÂNTICO", "Carta de Ataque", 0, 14), new CartaEscudo("A ESQUIVA ANALÍTICA", "Carta de Defesa", 0, 4), new CartaEfeito("ÁCIDO", "Carta de Efeito", 0, new EfeitoAcido(3, 5))), "Iglu")); // Primeira batalha (início do jogo)
+        mapa = new DefaultMutableTreeNode();
+        
+        DefaultMutableTreeNode l11 = new DefaultMutableTreeNode(new Batalha(new Inimigo("Puffle", 1, lerTXT("src/main/resources/Assets/inimigo0_capa.txt"), lerTXT("src/main/resources/Assets/inimigo0_capa_v.txt"), lerTXT("src/main/resources/Assets/inimigo0_capa_d.txt"), new CartaDano("A BOLA DE NEVE SUPERSÔNICA", "Carta de Ataque", 0, 10), new CartaDano("O CHUTE QUÂNTICO", "Carta de Ataque", 0, 14), new CartaEscudo("A ESQUIVA ANALÍTICA", "Carta de Defesa", 0, 4), new CartaEfeito("ÁCIDO", "Carta de Efeito", 0, new EfeitoAcido(3, 5))), "Iglu")); // Primeira batalha (início do jogo)
+        DefaultMutableTreeNode l21 = new DefaultMutableTreeNode(new Batalha(new Inimigo("Guitarrista", 1, lerTXT("src/main/resources/Assets/inimigo1_capa.txt"), lerTXT("src/main/resources/Assets/inimigo1_capa_v.txt"), lerTXT("src/main/resources/Assets/inimigo1_capa_d.txt"), new CartaDano("A BOLA DE NEVE SUPERSÔNICA", "Carta de Ataque", 0, 10), new CartaDano("O CHUTE QUÂNTICO", "Carta de Ataque", 0, 14), new CartaEscudo("A ESQUIVA ANALÍTICA", "Carta de Defesa", 0, 4), new CartaEfeito("ÁCIDO", "Carta de Efeito", 0, new EfeitoAcido(3, 5))), "Centro"));
+        DefaultMutableTreeNode l22 = new DefaultMutableTreeNode(new Batalha(new Inimigo("Pizzaiolo", 1, lerTXT("src/main/resources/Assets/inimigo2_capa.txt"), lerTXT("src/main/resources/Assets/inimigo2_capa_v.txt"), lerTXT("src/main/resources/Assets/inimigo2_capa_d.txt"), new CartaDano("A BOLA DE NEVE SUPERSÔNICA", "Carta de Ataque", 0, 10), new CartaDano("O CHUTE QUÂNTICO", "Carta de Ataque", 0, 14), new CartaEscudo("A ESQUIVA ANALÍTICA", "Carta de Defesa", 0, 4), new CartaEfeito("ÁCIDO", "Carta de Efeito", 0, new EfeitoAcido(3, 5))), "Plaza"));
+        DefaultMutableTreeNode l23 = new DefaultMutableTreeNode(new Batalha(new Inimigo("Surfista", 1, lerTXT("src/main/resources/Assets/inimigo3_capa.txt"), lerTXT("src/main/resources/Assets/inimigo3_capa_v.txt"), lerTXT("src/main/resources/Assets/inimigo3_capa_d.txt"), new CartaDano("A BOLA DE NEVE SUPERSÔNICA", "Carta de Ataque", 0, 10), new CartaDano("O CHUTE QUÂNTICO", "Carta de Ataque", 0, 14), new CartaEscudo("A ESQUIVA ANALÍTICA", "Carta de Defesa", 0, 4), new CartaEfeito("ÁCIDO", "Carta de Efeito", 0, new EfeitoAcido(3, 5))), "Praia"));
+        DefaultMutableTreeNode l31 = new DefaultMutableTreeNode(new Batalha(new Inimigo("Gary", 1, lerTXT("src/main/resources/Assets/inimigo4_capa.txt"), lerTXT("src/main/resources/Assets/inimigo4_capa_v.txt"), lerTXT("src/main/resources/Assets/inimigo4_capa_d.txt"), new CartaDano("A BOLA DE NEVE SUPERSÔNICA", "Carta de Ataque", 0, 10), new CartaDano("O CHUTE QUÂNTICO", "Carta de Ataque", 0, 14), new CartaEscudo("A ESQUIVA ANALÍTICA", "Carta de Defesa", 0, 4), new CartaEfeito("ÁCIDO", "Carta de Efeito", 0, new EfeitoAcido(3, 5))), "Estação de Esqui"));
+        DefaultMutableTreeNode l32 = new DefaultMutableTreeNode(new Batalha(new Inimigo("Rookie", 1, lerTXT("src/main/resources/Assets/inimigo5_capa.txt"), lerTXT("src/main/resources/Assets/inimigo5_capa_v.txt"), lerTXT("src/main/resources/Assets/inimigo5_capa_d.txt"), new CartaDano("A BOLA DE NEVE SUPERSÔNICA", "Carta de Ataque", 0, 10), new CartaDano("O CHUTE QUÂNTICO", "Carta de Ataque", 0, 14), new CartaEscudo("A ESQUIVA ANALÍTICA", "Carta de Defesa", 0, 4), new CartaEfeito("ÁCIDO", "Carta de Efeito", 0, new EfeitoAcido(3, 5))), "Forte Nevado"));
+        DefaultMutableTreeNode l33 = new DefaultMutableTreeNode(new Batalha(new Inimigo("Operário", 1, lerTXT("src/main/resources/Assets/inimigo6_capa.txt"), lerTXT("src/main/resources/Assets/inimigo6_capa_v.txt"), lerTXT("src/main/resources/Assets/inimigo6_capa_d.txt"), new CartaDano("A BOLA DE NEVE SUPERSÔNICA", "Carta de Ataque", 0, 10), new CartaDano("O CHUTE QUÂNTICO", "Carta de Ataque", 0, 14), new CartaEscudo("A ESQUIVA ANALÍTICA", "Carta de Defesa", 0, 4), new CartaEfeito("ÁCIDO", "Carta de Efeito", 0, new EfeitoAcido(3, 5))), "Casinha da Mina"));
+        DefaultMutableTreeNode l41 = new DefaultMutableTreeNode(new Batalha(new Inimigo("Herbert", 1, lerTXT("src/main/resources/Assets/inimigo7_capa.txt"), lerTXT("src/main/resources/Assets/inimigo7_capa_v.txt"), lerTXT("src/main/resources/Assets/inimigo7_capa_d.txt"), new CartaDano("A BOLA DE NEVE SUPERSÔNICA", "Carta de Ataque", 0, 10), new CartaDano("O CHUTE QUÂNTICO", "Carta de Ataque", 0, 14), new CartaEscudo("A ESQUIVA ANALÍTICA", "Carta de Defesa", 0, 4), new CartaEfeito("ÁCIDO", "Carta de Efeito", 0, new EfeitoAcido(3, 5))), "Montanha"));
+        DefaultMutableTreeNode l42 = new DefaultMutableTreeNode(new Batalha(new Inimigo("Sensei", 1, lerTXT("src/main/resources/Assets/inimigo8_capa.txt"), lerTXT("src/main/resources/Assets/inimigo8_capa_v.txt"), lerTXT("src/main/resources/Assets/inimigo8_capa_d.txt"), new CartaDano("A BOLA DE NEVE SUPERSÔNICA", "Carta de Ataque", 0, 10), new CartaDano("O CHUTE QUÂNTICO", "Carta de Ataque", 0, 14), new CartaEscudo("A ESQUIVA ANALÍTICA", "Carta de Defesa", 0, 4), new CartaEfeito("ÁCIDO", "Carta de Efeito", 0, new EfeitoAcido(3, 5))), "Pátio do Dojo"));
+        DefaultMutableTreeNode l43 = new DefaultMutableTreeNode(new Batalha(new Inimigo("Klutzy", 1, lerTXT("src/main/resources/Assets/inimigo9_capa.txt"), lerTXT("src/main/resources/Assets/inimigo9_capa_v.txt"), lerTXT("src/main/resources/Assets/inimigo9_capa_d.txt"), new CartaDano("A BOLA DE NEVE SUPERSÔNICA", "Carta de Ataque", 0, 10), new CartaDano("O CHUTE QUÂNTICO", "Carta de Ataque", 0, 14), new CartaEscudo("A ESQUIVA ANALÍTICA", "Carta de Defesa", 0, 4), new CartaEfeito("ÁCIDO", "Carta de Efeito", 0, new EfeitoAcido(3, 5))), "Iceberg"));
 
-        DefaultMutableTreeNode l21 = new DefaultMutableTreeNode(new Batalha(new Inimigo("Guitarrista", 20, lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo1_capa.txt"), lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo1_capa_v.txt"), lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo1_capa_d.txt"), new CartaDano("A BOLA DE NEVE SUPERSÔNICA", "Carta de Ataque", 0, 10), new CartaDano("O CHUTE QUÂNTICO", "Carta de Ataque", 0, 14), new CartaEscudo("A ESQUIVA ANALÍTICA", "Carta de Defesa", 0, 4), new CartaEfeito("ÁCIDO", "Carta de Efeito", 0, new EfeitoAcido(3, 5))), "Centro"));
-        DefaultMutableTreeNode l22 = new DefaultMutableTreeNode(new Batalha(new Inimigo("Pizzaiolo", 20, lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo2_capa.txt"), lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo2_capa_v.txt"), lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo2_capa_d.txt"), new CartaDano("A BOLA DE NEVE SUPERSÔNICA", "Carta de Ataque", 0, 10), new CartaDano("O CHUTE QUÂNTICO", "Carta de Ataque", 0, 14), new CartaEscudo("A ESQUIVA ANALÍTICA", "Carta de Defesa", 0, 4), new CartaEfeito("ÁCIDO", "Carta de Efeito", 0, new EfeitoAcido(3, 5))), "Plaza"));
-        DefaultMutableTreeNode l23 = new DefaultMutableTreeNode(new Batalha(new Inimigo("Surfista", 20, lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo3_capa.txt"), lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo3_capa_v.txt"), lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo3_capa_d.txt"), new CartaDano("A BOLA DE NEVE SUPERSÔNICA", "Carta de Ataque", 0, 10), new CartaDano("O CHUTE QUÂNTICO", "Carta de Ataque", 0, 14), new CartaEscudo("A ESQUIVA ANALÍTICA", "Carta de Defesa", 0, 4), new CartaEfeito("ÁCIDO", "Carta de Efeito", 0, new EfeitoAcido(3, 5))), "Praia"));
-        DefaultMutableTreeNode l31 = new DefaultMutableTreeNode(new Batalha(new Inimigo("Gary", 20, lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo4_capa.txt"), lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo4_capa_v.txt"), lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo4_capa_d.txt"), new CartaDano("A BOLA DE NEVE SUPERSÔNICA", "Carta de Ataque", 0, 10), new CartaDano("O CHUTE QUÂNTICO", "Carta de Ataque", 0, 14), new CartaEscudo("A ESQUIVA ANALÍTICA", "Carta de Defesa", 0, 4), new CartaEfeito("ÁCIDO", "Carta de Efeito", 0, new EfeitoAcido(3, 5))), "Estação de Esqui"));
-        DefaultMutableTreeNode l32 = new DefaultMutableTreeNode(new Batalha(new Inimigo("Rookie", 20, lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo5_capa.txt"), lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo5_capa_v.txt"), lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo5_capa_d.txt"), new CartaDano("A BOLA DE NEVE SUPERSÔNICA", "Carta de Ataque", 0, 10), new CartaDano("O CHUTE QUÂNTICO", "Carta de Ataque", 0, 14), new CartaEscudo("A ESQUIVA ANALÍTICA", "Carta de Defesa", 0, 4), new CartaEfeito("ÁCIDO", "Carta de Efeito", 0, new EfeitoAcido(3, 5))), "Forte Nevado"));
-        DefaultMutableTreeNode l33 = new DefaultMutableTreeNode(new Batalha(new Inimigo("Operário", 20, lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo6_capa.txt"), lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo6_capa_v.txt"), lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo6_capa_d.txt"), new CartaDano("A BOLA DE NEVE SUPERSÔNICA", "Carta de Ataque", 0, 10), new CartaDano("O CHUTE QUÂNTICO", "Carta de Ataque", 0, 14), new CartaEscudo("A ESQUIVA ANALÍTICA", "Carta de Defesa", 0, 4), new CartaEfeito("ÁCIDO", "Carta de Efeito", 0, new EfeitoAcido(3, 5))), "Casinha da Mina"));
-        DefaultMutableTreeNode l41 = new DefaultMutableTreeNode(new Batalha(new Inimigo("Herbert", 20, lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo7_capa.txt"), lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo7_capa_v.txt"), lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo7_capa_d.txt"), new CartaDano("A BOLA DE NEVE SUPERSÔNICA", "Carta de Ataque", 0, 10), new CartaDano("O CHUTE QUÂNTICO", "Carta de Ataque", 0, 14), new CartaEscudo("A ESQUIVA ANALÍTICA", "Carta de Defesa", 0, 4), new CartaEfeito("ÁCIDO", "Carta de Efeito", 0, new EfeitoAcido(3, 5))), "Montanha"));
-        DefaultMutableTreeNode l42 = new DefaultMutableTreeNode(new Batalha(new Inimigo("Sensei", 20, lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo8_capa.txt"), lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo8_capa_v.txt"), lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo8_capa_d.txt"), new CartaDano("A BOLA DE NEVE SUPERSÔNICA", "Carta de Ataque", 0, 10), new CartaDano("O CHUTE QUÂNTICO", "Carta de Ataque", 0, 14), new CartaEscudo("A ESQUIVA ANALÍTICA", "Carta de Defesa", 0, 4), new CartaEfeito("ÁCIDO", "Carta de Efeito", 0, new EfeitoAcido(3, 5))), "Pátio do Dojo"));
-        DefaultMutableTreeNode l43 = new DefaultMutableTreeNode(new Batalha(new Inimigo("Klutzy", 20, lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo9_capa.txt"), lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo9_capa_v.txt"), lerTXT("app/src/main/java/org/penguinfight/Assets/inimigo9_capa_d.txt"), new CartaDano("A BOLA DE NEVE SUPERSÔNICA", "Carta de Ataque", 0, 10), new CartaDano("O CHUTE QUÂNTICO", "Carta de Ataque", 0, 14), new CartaEscudo("A ESQUIVA ANALÍTICA", "Carta de Defesa", 0, 4), new CartaEfeito("ÁCIDO", "Carta de Efeito", 0, new EfeitoAcido(3, 5))), "Iceberg"));
-
-        mapa.add(l21);
-        mapa.add(l22);
-        mapa.add(l23);
-        l21.add(l31);
-        l21.add(l32);
-        l22.add(l32);
-        l22.add(l33);
-        l23.add(l33);
-        l31.add(l41);
-        l32.add(l42);
         l33.add(l43);
+        l32.add(l42);
+        l31.add(l41);
+        l23.add(l33);
+        l22.add((DefaultMutableTreeNode) l33.clone());
+        l22.add(l32);
+        l21.add((DefaultMutableTreeNode) l32.clone());
+        l21.add(l31);
+        l11.add(l23);
+        l11.add(l22);
+        l11.add(l21);
+        mapa.add(l11);
 
         cartas = criaCartas();
     }
@@ -169,13 +161,10 @@ public class App {
     public static String lerTXT(String s_path) {
         Path path = Path.of(s_path);
         try {
-            return Files.readString(path, StandardCharsets.UTF_8);
+            byte[] bytes = Files.readAllBytes(path);
+            return new String(bytes, Charset.defaultCharset());
         } catch (IOException e) {
-            try {
-                return Files.readString(path, Charset.forName("ISO-8859-1"));
-            } catch (IOException e2) {
-                return "Erro crítico: " + e2.getMessage();
-            }
+            return "Erro crítico: " + e.getMessage();
         }
     }
 }
